Fix menu positioning on mobile layout

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -66,9 +66,6 @@
     }
 
     @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
         background-color: $background-color;
         border: 1px solid $border-color;
         border-radius: 5px;
